--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
@@ -26,6 +27,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "antd": "^4.8.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
