--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "antd": "^4.8.6",
+    "axios": "^0.21.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
