--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "start": "webpack-dev-server --mode development",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production"
@@ -22,13 +22,16 @@
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "file-loader": "^6.2.0",
     "jest": "^26.6.3",
+    "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^17.0.1",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
@@ -38,6 +41,7 @@
   "dependencies": {
     "antd": "^4.8.6",
     "axios": "^0.21.0",
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
